# rms

./: Cargo.toml  config.json  spec-path.js
.cargo/: config.toml
.github/workflows/: trigger.yaml
cart-service/: Cargo.toml
cart-service/config/: default.yaml
cart-service/spec/: api-spec.yaml
cart-service/src/: server.rs
commons/: Cargo.toml
commons/src/setup/: app.rs
product-service/: Cargo.toml
product-service/config/: default.yaml
product-service/spec/: api-spec.yaml
product-service/src/: lib.rs  main.rs
product-service/src/config/: env.rs  mod.rs
product-service/src/routes/: mod.rs
