[package]
name = "cart-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
anyhow = "1.0.71"
